* Version 1.2.8 (unreleased)
- rc_random_vector will use gnutls_rnd() to obtain randomness if
  compiled with GnuTLS. This enables the library to not depend
  on specific kernel versions (there are versions of Linux kernel
  which do not provide calls for getentopy libc function).

* Version 1.2.7 (released 2016-12-18)
- Use monotonic time to calculate time differences. Based on
  patch by Marcel Patzlaff.
- Added basic EAP support. radcli will now automatically add
  a Message-Authenticator attribute to messages containing
  EAP-Message attributes. In addition, radcli will handle
  Access-Challenge response by returning a new
  CHALLENGE_RC result code. Patch by Martin Belanger.


* Version 1.2.6 (released 2016-04-04)
- Removed unused or deprecated options from configure.
- Added missing manpage rc_avpair_remove.3
- Deleted unused code.


* Version 1.2.5 (released 2015-11-28)
- Added TCP support (Aravind Prasad S)
- Corrected buffer overflow in rc_ipaddr_local()
- Added nas-ip config file option. That option allows to override
  the IP reported by NAS to the radius server.
- The NAS identifier set in the configuration file will override
  any identifier set by the application.
- The 'serv-auth-type' config option was renamed to 'serv-type'.
  That option also allows to configure for radius with TCP.


* Version 1.2.4 (released 2015-09-26)
- Use a portable name for radius accounting service (issue #4)


* Version 1.2.3 (released 2015-09-02)
- Re-added server fallback ability (Michael Richardson)
- Added 'clientdebug' option in the configuration file to allow
  easier debugging of the client (Michael Richardson)


* Version 1.2.2 (released 2015-08-21)
- Added versioned symbols


* Version 1.2.1 (released 2015-06-15)
- Removal of unused port-id-map file.
- Corrections in the link creation during install.
- Corrections in the types of the distributed dictionary.
- Added compatibility headers for radiusclient-ng.
- Added new API to access the context of a request.