@@ -2,11 +2,15 @@ dist: trusty
 sudo: required
 language: c
 compiler:
-#  - clang
   - gcc
+
+env:
+  - SCAN_BUILD="scan-build --status-bugs" CFLAGS="-g -O2" CHECK=0
+  - CFLAGS="-fsanitize=address -g -O2" LDFLAGS="-lasan" CHECK=1
+
 before_script:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cppcheck freeradius libgnutls28-dev libasan0 abi-compliance-checker
+  - sudo apt-get install -qq clang cppcheck freeradius libgnutls28-dev libasan0 abi-compliance-checker
   - sudo cp tests/docker/freeradius-users /etc/freeradius/users 
   - sudo cp tests/docker/radius-clients-notcp.conf /etc/freeradius/clients.conf
   - sudo sed -i 's/auth+acct/auth/g' tests/docker/tls.conf
@@ -18,11 +22,13 @@ before_script:
   - touch config.rpath && autoreconf -fvi
 
 script:
-  - CFLAGS="-fsanitize=address -g -O2" LDFLAGS="-lasan" ./configure --with-tls
-  - make
-  - NO_SERVER_TLS=1 NO_SERVER_TCP=1 SERVER_IP=127.0.0.1 SERVER_IP6=127.0.0.1 make check
-  - touch doc/stamp_mans
-  - make ABI_SKIP=1 dist
+  - CFLAGS="$CFLAGS" LDFLAGS="$LDFLAGS" $SCAN_BUILD ./configure --with-tls
+  - $SCAN_BUILD make
+  - if test $CHECK = 1;then
+      NO_SERVER_TLS=1 NO_SERVER_TCP=1 SERVER_IP=127.0.0.1 SERVER_IP6=127.0.0.1 make check;
+      touch doc/stamp_mans;
+      make ABI_SKIP=1 dist;
+    fi
 
 after_script:
   - cppcheck --force -q -Iinclude lib src
