@@ -89,7 +89,6 @@ void rc_avpair_remove (VALUE_PAIR **list, int attrid, int vendorpec)
 			} else { /* somewhere in the middle */
 				prev->next = vp->next;
 				free(vp);
-				vp = prev;
 			}
 			break;
 		}
@@ -456,8 +455,12 @@ VALUE_PAIR *rc_avpair_copy(VALUE_PAIR *p)
 	while (p) {
 		vp = malloc(sizeof(VALUE_PAIR));
 		if (!vp) {
-                  rc_log(LOG_CRIT, "rc_avpair_copy: out of memory");
-                  return NULL;  /* could leak pairs already copied */
+			while(fp) { /* free allocated memory */
+				vp = fp;
+				fp = fp->next;
+				free(vp);
+			}
+			return NULL;
 		}
 		*vp = *p;
 		if (!fp)
@@ -520,8 +523,10 @@ void rc_avpair_insert(VALUE_PAIR **a, VALUE_PAIR *p, VALUE_PAIR *b)
 		}
 	}
 
-	b->next = this_node->next;
-	this_node->next = b;
+	if (this_node) {
+		b->next = this_node->next;
+		this_node->next = b;
+	}
 
 	return;
 }
